Added logout route
